// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with only one rtl lang: .yfm 1`] = `"langs: ['he']"`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with only one rtl lang: filelist 1`] = `
"[
  ".yfm",
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/search-css-2",
  "_bundle/latex-extension.css",
  "_bundle/latex-extension.js",
  "_bundle/mermaid-extension.js",
  "_bundle/search-js-0",
  "_bundle/search-js-1",
  "_bundle/search-css-0",
  "_bundle/search-js-2",
  "_bundle/search-css-1",
  "index.html",
  "page.html",
  "toc.js"
]"
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with only one rtl lang: index.html 1`] = `
<!DOCTYPE html>
<html lang="he"
      dir="rtl"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-1"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-2"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/json"
            id="diplodoc-state"
    >
      {&quot;data&quot;:{&quot;data&quot;:{&quot;title&quot;:&quot;Documentation&quot;,&quot;links&quot;:[{&quot;title&quot;:&quot;Documentation&quot;,&quot;href&quot;:&quot;page.html&quot;}],&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;}]}},&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;}]},&quot;title&quot;:&quot;&quot;,&quot;leading&quot;:true},&quot;router&quot;:{&quot;pathname&quot;:&quot;index&quot;,&quot;depth&quot;:1},&quot;lang&quot;:&quot;he&quot;,&quot;langs&quot;:[&quot;he&quot;]}
    </script>
    <script type="application/javascript">
      function unescapeJsonFromHtml(escaped) {
  const unescaped = escaped.replace(/&#x27;/g, "'").replace(/&quot;/g, '"').replace(/&lt;/g, "
      <").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
  return JSON.parse(unescaped);
}
                   const data = document.querySelector('script#diplodoc-state');
                   window.__DATA__ = unescapeJsonFromHtml(data.innerText);
                   window.STATIC_CONTENT = false;
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with only one rtl lang: page.html 1`] = `
<!DOCTYPE html>
<html lang="he"
      dir="rtl"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-1"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-2"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/json"
            id="diplodoc-state"
    >
      {&quot;data&quot;:{&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;}]},&quot;assets&quot;:[],&quot;headings&quot;:[],&quot;title&quot;:&quot;&quot;,&quot;includes&quot;:[],&quot;html&quot;:&quot;&lt;p&gt;תיעוד&lt;/p&gt;/n&quot;,&quot;leading&quot;:false},&quot;router&quot;:{&quot;pathname&quot;:&quot;page&quot;,&quot;depth&quot;:1},&quot;lang&quot;:&quot;he&quot;,&quot;langs&quot;:[&quot;he&quot;]}
    </script>
    <script type="application/javascript">
      function unescapeJsonFromHtml(escaped) {
  const unescaped = escaped.replace(/&#x27;/g, "'").replace(/&quot;/g, '"').replace(/&lt;/g, "
      <").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
  return JSON.parse(unescaped);
}
                   const data = document.querySelector('script#diplodoc-state');
                   window.__DATA__ = unescapeJsonFromHtml(data.innerText);
                   window.STATIC_CONTENT = false;
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with only one rtl lang: toc.js 1`] = `"window.__DATA__.data.toc = {"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"UUID"}],"id":"UUID"};"`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs: .yfm 1`] = `"langs: ['ar', 'en']"`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs: ar/index.html 1`] = `
<!DOCTYPE html>
<html lang="ar"
      dir="rtl"
>
  <head>
    <meta charset="utf-8">
    <base href="../">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-1"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-2"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/json"
            id="diplodoc-state"
    >
      {&quot;data&quot;:{&quot;data&quot;:{&quot;title&quot;:&quot;Documentation&quot;,&quot;links&quot;:[{&quot;title&quot;:&quot;Documentation&quot;,&quot;href&quot;:&quot;ar/page.html&quot;}],&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;}]}},&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;}]},&quot;title&quot;:&quot;&quot;,&quot;leading&quot;:true},&quot;router&quot;:{&quot;pathname&quot;:&quot;ar/index&quot;,&quot;depth&quot;:2},&quot;lang&quot;:&quot;ar&quot;,&quot;langs&quot;:[&quot;ar&quot;,&quot;en&quot;]}
    </script>
    <script type="application/javascript">
      function unescapeJsonFromHtml(escaped) {
  const unescaped = escaped.replace(/&#x27;/g, "'").replace(/&quot;/g, '"').replace(/&lt;/g, "
      <").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
  return JSON.parse(unescaped);
}
                   const data = document.querySelector('script#diplodoc-state');
                   window.__DATA__ = unescapeJsonFromHtml(data.innerText);
                   window.STATIC_CONTENT = false;
    </script>
    <script src="ar/toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs: ar/page.html 1`] = `
<!DOCTYPE html>
<html lang="ar"
      dir="rtl"
>
  <head>
    <meta charset="utf-8">
    <base href="../">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-1"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-2"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/json"
            id="diplodoc-state"
    >
      {&quot;data&quot;:{&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;}]},&quot;assets&quot;:[],&quot;headings&quot;:[],&quot;title&quot;:&quot;&quot;,&quot;includes&quot;:[],&quot;html&quot;:&quot;&lt;p&gt;توثيق&lt;/p&gt;/n&quot;,&quot;leading&quot;:false},&quot;router&quot;:{&quot;pathname&quot;:&quot;ar/page&quot;,&quot;depth&quot;:2},&quot;lang&quot;:&quot;ar&quot;,&quot;langs&quot;:[&quot;ar&quot;,&quot;en&quot;]}
    </script>
    <script type="application/javascript">
      function unescapeJsonFromHtml(escaped) {
  const unescaped = escaped.replace(/&#x27;/g, "'").replace(/&quot;/g, '"').replace(/&lt;/g, "
      <").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
  return JSON.parse(unescaped);
}
                   const data = document.querySelector('script#diplodoc-state');
                   window.__DATA__ = unescapeJsonFromHtml(data.innerText);
                   window.STATIC_CONTENT = false;
    </script>
    <script src="ar/toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs: ar/toc.js 1`] = `"window.__DATA__.data.toc = {"title":"Documentation","href":"ar/index.html","items":[{"name":"Documentation","href":"ar/page.html","id":"UUID"}],"id":"UUID"};"`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs: en/index.html 1`] = `
<!DOCTYPE html>
<html lang="en"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="title"
          content="Documentation"
    >
    <meta name="noIndex"
          content="true"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation | Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/json"
            id="diplodoc-state"
    >
      {&quot;data&quot;:{&quot;data&quot;:{&quot;title&quot;:&quot;Documentation&quot;,&quot;description&quot;:&quot;&quot;,&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;}],&quot;title&quot;:&quot;Documentation&quot;,&quot;noIndex&quot;:true},&quot;links&quot;:[{&quot;title&quot;:&quot;Getting started with Documentation&quot;,&quot;description&quot;:&quot;This guide will show you the basics of working with Documentation&quot;,&quot;href&quot;:&quot;en/page.html&quot;}]},&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;}],&quot;title&quot;:&quot;Documentation&quot;,&quot;noIndex&quot;:true},&quot;title&quot;:&quot;Documentation&quot;,&quot;leading&quot;:true},&quot;router&quot;:{&quot;pathname&quot;:&quot;en/index&quot;,&quot;depth&quot;:2},&quot;lang&quot;:&quot;en&quot;,&quot;langs&quot;:[&quot;ar&quot;,&quot;en&quot;]}
    </script>
    <script type="application/javascript">
      function unescapeJsonFromHtml(escaped) {
  const unescaped = escaped.replace(/&#x27;/g, "'").replace(/&quot;/g, '"').replace(/&lt;/g, "
      <").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
  return JSON.parse(unescaped);
}
                   const data = document.querySelector('script#diplodoc-state');
                   window.__DATA__ = unescapeJsonFromHtml(data.innerText);
                   window.STATIC_CONTENT = false;
    </script>
    <script src="en/toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs: en/page.html 1`] = `
<!DOCTYPE html>
<html lang="en"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../">
    <meta name="generator"
          content="Diplodoc Platform vDIPLODOC-VERSION"
    >
    <meta name="yfm"
          content="builder"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/json"
            id="diplodoc-state"
    >
      {&quot;data&quot;:{&quot;meta&quot;:{&quot;metadata&quot;:[{&quot;name&quot;:&quot;generator&quot;,&quot;content&quot;:&quot;Diplodoc Platform v4.57.8&quot;},{&quot;name&quot;:&quot;yfm&quot;,&quot;content&quot;:&quot;builder&quot;}]},&quot;assets&quot;:[],&quot;headings&quot;:[],&quot;title&quot;:&quot;&quot;,&quot;includes&quot;:[],&quot;html&quot;:&quot;&lt;p&gt;Lorem&lt;/p&gt;/n&quot;,&quot;leading&quot;:false},&quot;router&quot;:{&quot;pathname&quot;:&quot;en/page&quot;,&quot;depth&quot;:2},&quot;lang&quot;:&quot;en&quot;,&quot;langs&quot;:[&quot;ar&quot;,&quot;en&quot;]}
    </script>
    <script type="application/javascript">
      function unescapeJsonFromHtml(escaped) {
  const unescaped = escaped.replace(/&#x27;/g, "'").replace(/&quot;/g, '"').replace(/&lt;/g, "
      <").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
  return JSON.parse(unescaped);
}
                   const data = document.querySelector('script#diplodoc-state');
                   window.__DATA__ = unescapeJsonFromHtml(data.innerText);
                   window.STATIC_CONTENT = false;
    </script>
    <script src="en/toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs: en/toc.js 1`] = `"window.__DATA__.data.toc = {"title":"Documentation","href":"en/index.html","items":[{"name":"Documentation","href":"en/page.html","id":"UUID"}],"id":"UUID"};"`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs: filelist 1`] = `
"[
  ".yfm",
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/search-css-2",
  "_bundle/latex-extension.css",
  "_bundle/latex-extension.js",
  "_bundle/mermaid-extension.js",
  "_bundle/search-js-0",
  "_bundle/search-js-1",
  "_bundle/search-css-0",
  "_bundle/search-js-2",
  "_bundle/search-css-1",
  "ar/index.html",
  "ar/page.html",
  "ar/toc.js",
  "en/index.html",
  "en/page.html",
  "en/toc.js",
  "index.html"
]"
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs: index.html 1`] = `
<!DOCTYPE html>
<html lang="ar"
      dir="rtl"
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="refresh"
          content="0; url=./ar/index.html"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Redirect
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-1"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-2"
    >
    <script type="text/javascript">
      window.location.replace("./ar/index.html");
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    If you are not redirected automatically, follow this
    <a href="./ar/index.html">
      link to example
    </a>
    .
  </body>
</html>
`;
